Fix[SMW-147]: sidemenu spacing fix

--- a/src/app/backoffice/pages/Login/styles.scss
+++ b/src/app/backoffice/pages/Login/styles.scss
@@ -4,4 +4,10 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+
+  .ant-input.ant-input-lg {
+    border-color: #aaaaaa;
+    box-shadow: none;
+    outline: none;
+  }
 }
